--- a/extensions.json
+++ b/extensions.json
@@ -1,1 +1,7 @@
-[]
+[
+  {
+    "name": "JoeGPT",
+    "description": "A artificial \"\"\"\"\"\"\"\"intelligence\"\"\"\"\"\"\"\" that really only reports \"joe\"",
+    "credits": "PuzzlingGGG"
+  }
+]
