forgot the comma :skull:

--- a/extensions.json
+++ b/extensions.json
@@ -2,7 +2,7 @@
   {
     "name": "JoeGPT",
     "description": "A artificial \"\"\"\"\"\"\"\"intelligence\"\"\"\"\"\"\"\" that really only reports \"joe\"",
-    "credits": "PuzzlingGGG"
+    "credits": "PuzzlingGGG",
     "link": "https://raw.githubusercontent.com/PuzzlingGGG/puz-ext/main/extensions/js/joegpt.js"
   }
 ]
