--- a/extensions.json
+++ b/extensions.json
@@ -3,6 +3,6 @@
     "name": "JoeGPT",
     "description": "A artificial \"\"\"\"\"\"\"\"intelligence\"\"\"\"\"\"\"\" that really only reports \"joe\"",
     "credits": "PuzzlingGGG",
-    "link": "https://puz-ext.vercel.app/js/joegpt.js"
+    "link": "https://puz-ext.vercel.app/extensions/js/joegpt.js"
   }
 ]
