--- a/extensions.json
+++ b/extensions.json
@@ -4,5 +4,12 @@
     "description": "A artificial \"\"\"\"\"\"\"\"intelligence\"\"\"\"\"\"\"\" that really only reports \"joe\"",
     "credits": "PuzzlingGGG",
     "link": "https://puz-ext.vercel.app/extensions/js/joegpt.js"
-  }
+  },
+  {
+    "name": "Text to Speech: Rewritten",
+    "description": "Generate better TTS! Made using TTS Tool API!",
+    "credits": "PuzzlingGGG",
+    "link": "https://puz-ext.vercel.app/extensions/js/ttsr.js",
+    "banner": "https://puz-ext.vercel.app/extensions/banner/TTSR.png"
+  },
 ]
