--- a/extensions.json
+++ b/extensions.json
@@ -13,5 +13,13 @@
     "link": "https://puz-ext.vercel.app/extensions/js/ttsr.js",
     "banner": "https://puz-ext.vercel.app/extensions/banner/TTSR.png",
     "unsandboxed": true
-  }
+  },
+  {
+    "name": "Underspeech",
+    "description": "Generate and display Undertale-style speech bubbles",
+    "credits": "PuzzlingGGG",
+    "link": "https://puz-ext.vercel.app/extensions/js/underspeech.js",
+    "banner": "https://puz-ext.vercel.app/extensions/banner/underspeech.png",
+    "unsandboxed": true
+  },
 ]
